--- a/sliwk-heuer-firma-aufgeben.html
+++ b/sliwk-heuer-firma-aufgeben.html
@@ -3,7 +3,7 @@
 <html lang="de">
 <head>
   <meta charset="UTF-8">
-  <title>Firma aufgeben – Sliwk & Heuer</title>
+  <title>Firma aufgeben – Sliwka & Heuer</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="apple-style.css">
   <style>
