--- a/sliwk-heuer-inserate-final.html
+++ b/sliwk-heuer-inserate-final.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Inserate – Sliwk & Heuer</title>
+  <title>Inserate – Sliwka & Heuer</title>
   <link rel="stylesheet" href="apple-style.css">
   <style>
     .card {
