--- a/sliwk-heuer-marktanalyse-buttons.html
+++ b/sliwk-heuer-marktanalyse-buttons.html
@@ -3,7 +3,7 @@
 <html lang="de">
 <head>
   <meta charset="UTF-8">
-  <title>Marktanalyse – Sliwk & Heuer</title>
+  <title>Marktanalyse – Sliwka & Heuer</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="apple-style.css">
   <style>
