--- a/sliwk-heuer-start.html
+++ b/sliwk-heuer-start.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Sliwk & Heuer – Startseite</title>
+  <title>Sliwka & Heuer – Startseite</title>
   <link rel="stylesheet" href="apple-style.css">
 </head>
 <body>
